--- a/SpaceXGraphQL/SpaceXGraphQL/SpaceXGraphQL.csproj
+++ b/SpaceXGraphQL/SpaceXGraphQL/SpaceXGraphQL.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
+        <LangVersion>8</LangVersion>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -10,6 +11,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Xamarin.Forms" Version="4.4.0.991640"/>
+        <PackageReference Include="GraphQL.Client" Version="3.2.1" />
+        <PackageReference Include="GraphQL.Client.Serializer.Newtonsoft" Version="3.2.1" />
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+        <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+        <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="SpaceX" />
+      <Folder Include="SpaceX\gen" />
     </ItemGroup>
 </Project>
